createBulk doesn't return DTOs